syntax = "proto3";

option go_package = "istio.io/istio/security/pkg/key-curator/key-curator";

package keycurator;

service KeyCurator {

    rpc Setup(SetupRequest) returns (SetupResponse) {}
    rpc RegisterUser(RegisterRequest) returns (RegisterResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
}

message SetupRequest{
    uint32 lambda = 1;
    uint32 N = 2;
}

message SetupResponse{
    string crs = 1;
}

message RegisterRequest{
    string crs = 1;
    string pp = 2;
    string id = 3;
    string pk = 4;
}

message RegisterResponse{
    string pp = 1;
}

message UpdateRequest{
    string pp = 2;
    string id = 3;
}

message UpdateResponse{
    string u = 1;
}
